--- a/src/KonversiSuhuForm.form
+++ b/src/KonversiSuhuForm.form
@@ -32,7 +32,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="e3" red="e3" type="rgb"/>
+          <Color blue="f9" green="c6" red="c6" type="rgb"/>
         </Property>
       </Properties>
       <Constraints>
